# elements-api

./: README.md
integrations/sentinel/data_connector/: .gitignore  README.md  pyproject.toml
integrations/sentinel/data_connector/app/: function_app.py
integrations/sentinel/data_connector/app/lib/: __init__.py  azure_storage_table.py  events_formatter.py  log_ingestion_api.py  message_factory.py  withsecure_client.py  ws_connector.py
integrations/sentinel/data_connector/deploy/: azuredeploy_connector_app.json  connector_app_parameters.json
integrations/sentinel/data_connector/docs/: installation_guide.md
integrations/sentinel/data_connector/scripts/: dist_app.py
integrations/sentinel/data_connector/tests/: test_azure_storage_table.py  test_events_formatter.py  test_log_ingestion_api.py  test_message_factory.py  test_withsecure_client.py
integrations/sentinel/data_connector/tests/events/: amsi-infection-block.json  application-control-error-event.json  application-control-event.json  application-control-file-access-block-event.json  application-control-file-access-report-event.json  application-control-installation-start-block-event.json  application-control-report-event.json  connection-control-connection-blocked-event.json  connection-control-page-blocked-event.json  connection-control-remote-access-blocked-event.json  data-guard-event.json  data-guard-event_ransomware.json  data-guard-v2-report-event.json  data-guard-v2-vault.json  deep-guard-event-v2.json  deep-guard-event.json  deep-guard-event_command_line.json  device-control-event.json  (+38 more)
(+8 files in other folders)
